# base-cli-py

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml  ci.yml
src/base_cli/: logging.py  main.py
src/base_cli/command/: goodbye.py  helloworld.py
src/base_cli_py/: main.py
tests/: conftest.py  test_helloworld.py  test_logging.py  test_main.py
