[project]
name = "base-cli"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
base-cli = "base_cli.main:main"

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.14",
    "mypy>=2.1",
    "pyright>=1.1",
    "pytest>=9.0",
    "ruff>=0.15",
    "ty>=0.0.38",
]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.coverage.run]
source = ["src"]
branch = true

[tool.mypy]
strict = true
files = ["src", "tests"]

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle (error)
    "F",   # pyflakes
    "B",   # bugbear
    "B9",
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "I",   # isort
    "UP",  # pyupgrade
    "PIE", # flake8-pie
    "PGH", # pygrep-hooks
    "PYI", # flake8-pyi
    "RUF",
]
