[project]
name = "base-cli"
version = "0.1.0"
description = "Minimal bleeding-edge CLI template with latest tooling and strict checks."
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
]
requires-python = ">=3.14"
dependencies = [
    "rich>=15.0",
    "typer>=0.25",
]

[project.scripts]
base-cli = "base_cli.main:app"

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.11.16,<0.12"]

[dependency-groups]
dev = [
    "coverage>=7.14",
    "mypy>=2.1",
    "pyright>=1.1",
    "pytest>=9.0",
    "ruff>=0.15.15",
    "ty>=0.0.38",
    "vulture>=2.16",
    "yamllint>=1.38",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]

[tool.mypy]
files = ["src", "tests"]
strict = true

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff]
line-length = 144

[tool.ruff.lint]
ignore = [
    "S101", # assert
]
select = [
    "B",   # bugbear
    "B9",
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle (error)
    "F",   # pyflakes
    "I",   # isort
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PYI", # flake8-pyi
    "RUF",
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]

[tool.vulture]
paths = ["src", "tests"]
