[project]
name = "base-cli"
version = "0.1.0"
description = "Minimal CLI template with latest tooling and strict checks"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
]
requires-python = ">=3.14"
dependencies = [
    "typer>=0.26.7",
]

[project.scripts]
base-cli = "base_cli.main:app"

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.11.24,<0.12"]

[dependency-groups]
dev = [
    "coverage>=7.14.3",
    "mypy>=2.1.0",
    "pyright>=1.1.410",
    "pytest>=9.1.1",
    "ruff>=0.15.19",
    "ty>=0.0.53",
    "vulture>=2.16",
    "yamllint>=1.38.0",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]

[tool.mypy]
files = ["src", "tests"]
strict = true

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff.lint]
ignore = [
    "S101", # assert
]
select = [
    "B",   # bugbear
    "B9",
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle (error)
    "F",   # pyflakes
    "I",   # isort
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PYI", # flake8-pyi
    "RUF",
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]

[tool.vulture]
paths = ["src", "tests"]
